# CameraCore

./: CMakeLists.txt  README.md  armv7l.conf  build.conf  mygbs.conf
inlcude/: Cameradae.h  cameradae.h  libusb-api.h
packaging/: systemupdate.spec
pkgconfig/: systemupdate.pc  systemupdate.pc.in
src/: command-adapter-thread.c  dbus-api.c  fsm-thread.c  gst-pipeline-thread.c  ivos-cameradae-service.c  libusb-api.c  send-signal.c  threads.c
src _noDbus/: main.c  threads.c
system/: systemupdate.conf  systemupdate.service  update.sh
